# RealFace

./: .gitignore  README.md
LocalLBP/: CMakeList.txt~  CMakeLists.txt  CMakeLists.txt~  GetLandmarks.cc  GetLandmarks.h  LandmarkLBP.cc
RSSDKConverter/: RSSDKConverter.sln
RSSDKConverter/RSSDKConverter/: RSSDKConverter.cpp  RSSDKConverter.vcxproj  RSSDKConverter.vcxproj.filters
